projects/deja-js/component/popup/component/popup-toolbar/popup-toolbar.component.scss
.deja-popup-toolbar {
    >.mat-icon {
        margin-right: 4px;
    }
}

.deja-popup-toolbar-mini {
    display: flex;
    height: auto;

    .deja-popup-toolbar-content {
        font-size: 12px;

        button,
        .mat-icon {
            width: 18px;
            height: 18px;
            line-height: 18px;
        }

        button {
            margin-left: 4px;
        }

        .mat-icon {
            font-size: 18px;
        }
    }

    .deja-popup-toolbar-spacer {
        flex: 1;
        cursor: grab;

        .mat-icon {
            vertical-align: sub;
            margin-right: 4px;
        }
    }

    .deja-popup-toolbar-actions {
        padding-left: 1rem;
    }

    // Remove left padding for all toolbar actions except the first one
    .deja-popup-toolbar-actions~.deja-popup-toolbar-actions {
        padding-left: 0;
    }

    .actions-hide {
        display: none;
    }
}

